fix(style): change gaps and padding size

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -53,18 +53,17 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 8px;
 }
 
-.right-header {
+.right-header, .left-header {
   display: flex;
-}
-
-.left-header {
-  display: flex;
+  gap: 16px;
 }
 
 .links {
   display: flex;
   padding: 0;
   align-items: center;
+  gap: 16px;
 }
